# graphql-todo

./: .editorconfig  Cargo.toml  README.md  compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  sqlite.rs  todo.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/graphql/: index.d.ts
frontend/src/: App.tsx  index.html  main.imba  todo.ts
src/: main.rs  todo.rs
