[package]
name = "graphql-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
async-graphql = "5.0.10"
async-graphql-actix-web = "5.0.10"
dotenvy = "0.15.7"
once_cell = "1.18.0"
rusqlite = { version = "0.29.0", features = ["bundled", "uuid"] }
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-actix-native-tls",
    "macros",
] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-rusqlite = "0.4.0"
uuid = { version = "1.4.0", features = ["v4"] }
